--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 </ol>
 
-<a href="E:\web development course\contacts.html">contact me </a>
+<a href="contacts.html">contact me </a>
 <hr>
 <table>
   <tr>
