--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 </ol>
 
-<a href="contacts.html">contact me </a>
+<a href="https://github.com/sherifamrmahmoud/cv/blob/main/contacts.html">contact me </a>
 <hr>
 <table>
   <tr>
